# ai-product-dev-tips

./: .gitignore  .mcp.json  CLAUDE.md  README.md  README_claude.md  README_format.md
.claude/: settings.json
.github/workflows/: claude-pr-creator.yml  claude-pr-description.yml  claude-readme.yml  claude-reusable.yml  claude-vertex-ai.yml  claude.yml  workflows_mac.yml
acceleration_processing/1/: README.md  concat_files.py  split_files.py
acceleration_processing/2/: README.md  image_resize.py  image_resize_parallel.py
audio_processing/1/: .gitignore  README.md  cleansing_silence.py  cleansing_silence.sh
conda_processing/1/: README.md
conda_processing/2/: README.md  conda_install_pytorch04_py36.sh  conda_install_pytorch11_py36.sh
dev_optimize/1/: README.md
dev_optimize/10/: README.md
dev_optimize/11/: README.md
dev_optimize/12/: README.md
dev_optimize/13/: README.md
dev_optimize/2/: README.md
dev_optimize/3/: README.md
dev_optimize/4/: README.md
dev_optimize/5/: README.md
dev_optimize/6/: README.md
dev_optimize/7/: README.md
dev_optimize/8/: README.md
dev_optimize/9/: README.md
docker/1/: README.md
docker_processing/1/: README.md
docker_processing/2/: README.md
docker_processing/3/: README.md
docker_processing/4/: README.md
docker_processing/5/: Dockerfile  README.md  run_docker1.sh  run_docker2.sh
docker_processing/6/: README.md
docker_processing/7/: README.md
docker_processing/8/: README.md
docker_processing/9/: README.md
dockerfile/: Dockerfile_pytorch18_cuda102  run_docker.sh
image_processing/1/: README.md
image_processing/10/: README.md  graph_cut_from_image.py  graph_cut_from_image_parse.py
image_processing/11/: README.md  image_adjust_wo_mask1.py  image_adjust_wo_mask2.py  image_adjust_wo_mask3.py  image_processing_11.sh  resize_and_crop_wo_mask1.py  resize_and_crop_wo_mask2.py  resize_and_crop_wo_mask3.py
image_processing/12/: README.md  alpha_blend_image_and_parse.py  image_processing_12.sh
image_processing/13/: README.md  image_processing_13.sh  offset_image_pillow.py  rotate_image_pillow.py  scale_image_pillow.py
image_processing/14/: README.md  dilate_image.py  dilate_image_human_cloth.py  erode_image.py  image_processing_14.sh
image_processing/15/: README.md  detect_face_landmark.py  image_processing_15.sh
image_processing/16/: README.md  dilate_image_human_cloth.py  image_processing_16.sh
image_processing/17/: README.md  approx_contours_PolyDP.py  image_processing_17.sh
image_processing/2/: README.md
image_processing/3/: README.md
image_processing/4/: README.md  convert_cv2_to_pillow.py  convert_pillow_to_cv2.py
image_processing/5/: README.md  get_label_from_parse_image1.py  get_label_from_parse_image2.py
image_processing/6/: README.md  crop_label_from_parse_image1.py
image_processing/7/: README.md  create_grid_image.py
image_processing/8/: README.md  check_symmetry.py  check_symmetry2.py
image_processing/9/: README.md  create_binary_mask.py  create_binary_mask_grabCut.py
io_processing/1/: README.md  get_file_list.ipynb  get_file_list.py
io_processing/2/: README.md  check_file.sh  check_file2.sh
io_processing/3/: README.md  check_filename_diff.py
io_processing/4/: README.md
io_processing/5/: README.md  run_python_cli.sh  run_python_cli_local.sh  run_python_cli_pypi.sh
io_processing/6/: README.md
io_processing/7/: .gitignore  README.md  main.go  run_go_cli.sh
ios_app/2/: deploy_iosapp_firebase.sh
ios_app/3/: README.md
ml_ops/1/: README.md  install_kubeflow_kfctl.sh  kfctl_env.sh  run_gke.sh  run_k8s_dashboard.sh  run_kubeflow_kfctl.sh  run_kubeflow_ks.sh
ml_ops/10/: README.md
ml_ops/100/: README.md  main_1.go  main_2.go  main_3.go  run_go.sh
ml_ops/101/: README.md  run_go_test_mock.sh
ml_ops/102/: README.md  run_open_ai_api.py  run_open_ai_api.sh
ml_ops/103/: README.md
ml_ops/104/: .gitignore  README.md  download_file_from_huggingface_repo.py
ml_ops/105/: README.md
ml_ops/106/: README.md  run_question_answering_w_pipeline1.py  run_question_answering_w_pipeline2.py  run_question_answering_wo_pipeline.py
ml_ops/107/: README.md
ml_ops/108/: .flake8  (+8 more)
nlp_processing/36/: .flake8  .mcp.json  Makefile  README.md  cursor_mcp_config.json  mcp_server.py  pyproject.toml
nlp_processing/53/: .flake8  Makefile  README.md  predict.py  pyproject.toml  train.py  train_poweroff.sh  trainer.py  utils.py
nlp_processing/54/: Makefile  README.md  predict.py  pyproject.toml  train.py  utils.py
nlp_processing/67/: .gitignore  Makefile  README.md  create_report.py  detect_and_report.py  download_dataset.py  evaluate_report.py  nab_score.py  prompts.yaml  pyproject.toml  requirements.txt  run_cpu.sh
nlp_processing/67/reports/: ambient-temp.md  cpu.md  machine-temp.md  network.md  traffic-occupancy.md  traffic-speed.md
nlp_processing/68/: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  Makefile  README.md  create_dataset_stage1.py  create_dataset_stage2.py  create_stage2_dataset.py  download_dataset.py  mhealth_stage1_prep.py  mhealth_stage2_prep.py  plot_stage2.py  predict.py  predict_stage2.py  prepare_sample.py  pyproject.toml  run_predict.sh  stage1_predict.py  stage2_predict.py  train_entry.py
nlp_processing/69/: Makefile  README.md  detect_numeric_llm.py  nab_common.py  nab_score.py  prompts.yaml  pyproject.toml
nlp_processing/69/reports/: ambient-temp.md  cpu.md  machine-temp.md  network.md  traffic-occupancy.md  traffic-speed.md
nlp_processing/70/: .env.sample  .flake8  .gitignore  Makefile  README.md  detect_vlm_image.py  download_dataset.py  evaluate_report.py  nab_common.py  nab_sweeper.py  prompts.yaml  pyproject.toml
nlp_processing/70/reports/: ambient-temp.md  cpu.md  machine-temp.md  network.md  traffic-occupancy.md  traffic-speed.md
nlp_processing/71/: .flake8  Makefile  README.md  create_report.py  download_dataset.py  evaluate_report.py  prompts.yaml  pyproject.toml
nlp_processing/71/reports/: ambient-temp.md  cpu.md  machine-temp.md  network.md  traffic-occupancy.md  traffic-speed.md
web_scraping/: README.md
(+1533 files in other folders)
