[project]
name = "hello-world-mcp-server"
version = "0.1.0"
description = "Claude Code用の簡単なMCPサーバー"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp~=1.16.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.0.0",
    "black>=22.0.0,<24.0.0",
    "isort~=5.12.0",
    "flake8~=6.0.0",
    "mypy~=1.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W"]
