[project]
name = "llm-distillation-model"
version = "1.0.0"
description = "HuggingFace Transformers の カスタム Trainer を使用して LLM の蒸留モデル（Logit蒸留）を作成する"
authors = [
    {name = "Yusuke Sakai (GitHub: Yagami360)", email = "y034112@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.35.3",
    "transformers>=4.46.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "tensorboard>=2.14.0",
    "accelerate>=0.26.0",
    "sentencepiece>=0.2.0",  # DeepSeekトークナイザー用
    "protobuf>=3.20.0",      # DeepSeekトークナイザー用
#    "bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.0.0",
    "black>=22.0.0,<24.0.0",
    "isort~=5.12.0",
    "flake8~=6.0.0",
    "mypy~=1.0.0",
    "types-PyYAML~=6.0.0",
    "types-requests~=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 150
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv/", "venv/", "__pycache__/", ".git/", ".mypy_cache/", ".pytest_cache/", ".old/", ".debug/", ".logs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
