[project]
name = "sensorllm-run"
version = "0.1.0"
description = "SensorLLM (Stage1) 推論を uv で再現実行するための環境定義"
requires-python = ">=3.10,<3.12"

# バージョンは互換リリース指定(~=)で固定する。
# 【重要】SensorLLM の公式コードは transformers 4.45 系 / torch 2.4 系 / numpy 1.x 系を
# 前提に書かれている（カスタム LlamaForCausalLM 実装が当該バージョンの内部 API に依存）。
# 2026-07 時点の最新は transformers 5.x 系・torch 2.1x 系・numpy 2.x 系だが、これらでは
# 動かないため、ML コアは「動作確認済みの互換レンジ」に固定し、周辺ツールのみ新しめにする。
dependencies = [
    "transformers~=4.45.1",   # 4.45.x（カスタムモデルが依存。5.x は非互換）
    "numpy~=1.24.4",          # 1.24.x（numpy 2.x / pandas・scipy との非互換を回避）
    "huggingface-hub~=0.30",  # >=0.30,<1.0（Xet 対応かつ transformers 4.45 互換）
    "hf-xet~=1.1",            # HF Xet 取得（未導入だと Xet DL がハングしやすい）
    "accelerate~=0.34",
    "safetensors~=0.4",
    "sentencepiece~=0.2",
    "protobuf~=5.28",
    "pyyaml~=6.0",
    "requests~=2.32",
    "pandas~=2.0.3",
    "scikit-learn~=1.3.2",
    "scipy~=1.10.1",
    "matplotlib~=3.7",       # 入力センサー信号の可視化(--plot)用
]

[project.optional-dependencies]
# torch は環境に合わせて片方を選ぶ（CUDA 12.x の GPU なら cu121、CPU のみなら cpu）
cu121 = ["torch~=2.4.1"]
cpu = ["torch~=2.4.1"]

# 学習（Stage1/Stage2）とデータ生成に必要な追加依存。
# 推論だけなら不要。train.py が import する評価系（nltk/evaluate）と、
# 学習データ生成スクリプト(mhealth_*_prep.py)が使う統計系(statsmodels)。
train = [
    "nltk~=3.9",         # train.py の BLEU 計算 import
    "evaluate~=0.4",     # train.py の f1/accuracy/precision/recall ロード
    "pyarrow~=14.0",     # evaluate→datasets が新 pyarrow(PyExtensionType 削除)と非互換なため固定
    "jinja2~=3.1",       # transformers のチャットテンプレート適用
    "statsmodels~=0.14", # Stage2 QA 生成の自己相関(acf)計算
]

# 開発ツール（lint / format）。make install で入る。
dev = [
    "flake8~=7.1",
    "mypy~=1.11",
    "black~=24.8",
    "isort~=5.13",
    "types-PyYAML~=6.0",  # yaml の型スタブ（mypy 用）
]

[tool.black]
line-length = 150

[tool.isort]
profile = "black"
line_length = 150

[tool.mypy]
# torch / sensorllm 等は型スタブ未提供・ローカル未導入なので import エラーは無視
ignore_missing_imports = true

# 自動生成（公式ノート由来）の prep スクリプトは動的な dict/list/ファイル操作が多く、
# 静的型推論と相性が悪い。型チェック対象には含めるが、当該の偽陽性コードのみ緩和する。
[[tool.mypy.overrides]]
module = ["mhealth_stage1_prep", "mhealth_stage2_prep"]
disable_error_code = ["attr-defined", "assignment", "arg-type", "index"]

# アプリ本体をパッケージ化しない（依存だけを .venv に入れる仮想プロジェクト）
[tool.uv]
package = false
# cpu / cu121 は相互排他（torch の index が異なる）。宣言しないと解決が競合エラーになる
conflicts = [
    [{ extra = "cpu" }, { extra = "cu121" }],
]

# torch は PyTorch 公式 index から取得する（extra に応じて cu121 / cpu を切替）
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
