[project]
name = "tsad-numeric-llm"
version = "0.1.0"
description = "系統(a) 数値直接入力: LLM に数値時系列を直接読ませてセンサー異常を検知する"
requires-python = ">=3.11"
# バージョンは ~= で互換範囲を固定（記事作成時点 2026-07 の最新安定版に合わせる）。
dependencies = [
    "numpy~=2.4",
    "matplotlib~=3.11",  # 可視化
    "openai~=2.45",      # LLM（OpenAI 互換クライアント。reasoning_effort 対応）
    "pyyaml~=6.0",       # プロンプト定義(prompts.yaml)の読み込み
]

# 開発ツール（lint / format）。make install-dev で入る。
[project.optional-dependencies]
dev = [
    "flake8~=7.1",
    "mypy~=1.11",
    "black~=24.8",
    "isort~=5.13",
    "types-PyYAML~=6.0",  # yaml の型スタブ（mypy 用）
]

[tool.black]
line-length = 150
# NAB 公式実装をそのまま流用しているファイルは整形しない
extend-exclude = "nab_sweeper.py"

[tool.isort]
profile = "black"
line_length = 150
extend_skip = ["nab_sweeper.py"]

[tool.mypy]
exclude = ["nab_sweeper.py"]
# openai / matplotlib 等は型スタブ未提供のものがあるため import エラーは無視
ignore_missing_imports = true

[tool.uv]
package = false
